--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ This web application allows Mumbaikars to directly order a dabba for their after
 						     <p> Want to get in touch with us?</p>
 						     <div>
 							     <p class="g">Email Us :- <em >abc@gmail.com</em></p>
-							     <p class="g"> Call Us :-<em >9658968895</em></p>
+							     <p class="g"> Call Us :-<em >9211173314</em></p>
 							     <p class="g">Meet Us :-<em > Friends colony,Jamshedpur-831007</em></p>
 						     </div>
 						     <br><br>
@@ -153,7 +153,7 @@ This web application allows Mumbaikars to directly order a dabba for their after
 								 <div class="container-fluid">
 									 <div class="row">
 										 <div class="col-lg-12">
-											 <img id="i2" src="css/sarwar.jpg" alt="image">
+											 <img id="i2" src="css/sarwar.JPG" alt="image">
 										 </div>
 										 <div class="col-lg-0"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											 <a style="font-size:40px;" href="https://www.linkedin.com/in/sarwar-baig-691912132/" target="_blank" class="fa fa-linkedin grow"></a>
